--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     </div>
                 </div>
                 <div style="text-align: center;">
-                    <a href="#" class="watch-btn">🎥 Watch Now</a>
+                    <a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a" class="watch-btn">🎥 Watch Now</a>
                 </div>
             </div>
         </section>
@@ -592,28 +592,28 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Live Streaming</a></li>
-                        <li><a href="#">Highlights</a></li>
-                        <li><a href="#">Statistics</a></li>
-                        <li><a href="#">Schedule</a></li>
+                        <li><a href="https://www.profitableratecpm.com/gjfx4s3hn?key=15059bd2d625f06bcd5e0307e5501c97">Live Streaming</a></li>
+                        <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Highlights</a></li>
+                        <li><a href="https://www.profitableratecpm.com/gjfx4s3hn?key=15059bd2d625f06bcd5e0307e5501c97">Statistics</a></li>
+                        <li><a href="https://www.profitableratecpm.com/bcgit0k5y6?key=c42a78503bb2714e1669b35c13cce026">Schedule</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Leagues</h3>
                     <ul>
-                        <li><a href="#">Premier League</a></li>
-                        <li><a href="#">La Liga</a></li>
-                        <li><a href="#">Serie A</a></li>
-                        <li><a href="#">Bundesliga</a></li>
+                        <li><a href="https://www.profitableratecpm.com/bcgit0k5y6?key=c42a78503bb2714e1669b35c13cce026">Premier League</a></li>
+                        <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">La Liga</a></li>
+                        <li><a href="https://www.profitableratecpm.com/dx45nkvg?key=3dbf9cc7f63a28045758f2cc8f1e67f0">Serie A</a></li>
+                        <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Bundesliga</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Support</h3>
                     <ul>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Report</a></li>
+                        <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Help</a></li>
+                        <li><a href="https://www.profitableratecpm.com/dx45nkvg?key=3dbf9cc7f63a28045758f2cc8f1e67f0">Contact</a></li>
+                        <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">FAQ</a></li>
+                        <li><a href=https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Report</a></li>
                     </ul>
                 </div>
             </div>
