--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Help</a></li>
                         <li><a href="https://www.profitableratecpm.com/dx45nkvg?key=3dbf9cc7f63a28045758f2cc8f1e67f0">Contact</a></li>
                         <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">FAQ</a></li>
-                        <li><a href=https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Report</a></li>
+                        <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Report</a></li>
                     </ul>
                 </div>
             </div>
