--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
         <nav class="container">
             <div class="logo">⚽ SportStream</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#live">Live</a></li>
-                <li><a href="#upcoming">Schedule</a></li>
-                <li><a href="#leagues">Leagues</a></li>
-                <li><a href="#highlights">Highlights</a></li>
+                <li><a href="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8">Home</a></li>
+                <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Live</a></li>
+                <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Schedule</a></li>
+                <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Leagues</a></li>
+                <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Highlights</a></li>
             </ul>
         </nav>
     </header>
@@ -375,7 +375,7 @@
                     </div>
                 </div>
                 <div style="text-align: center;">
-                    <a href="#" class="watch-btn">🎥 Watch Now</a>
+                    <a href="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8" class="watch-btn">🎥 Watch Now</a>
                 </div>
             </div>
 
