--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 
     <script>
         // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        document.querySelectorAll('a[href^="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
