--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
         <nav class="container">
             <div class="logo">⚽ SportStream</div>
             <ul class="nav-links">
-                <li><a href="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8">Home</a></li>
+                <li><a href="https://www.profitableratecpm.com/afh65r9z3u?key=00b5e86a9929bf36920d83ca153fa6d3">Home</a></li>
                 <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Live</a></li>
                 <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Schedule</a></li>
-                <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Leagues</a></li>
-                <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Highlights</a></li>
+                <li><a href="https://www.profitableratecpm.com/s85t48zndn?key=8643450af5bb06aeb5b48c2c03f1cc30">Leagues</a></li>
+                <li><a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55">Highlights</a></li>
             </ul>
         </nav>
     </header>
@@ -375,7 +375,7 @@
                     </div>
                 </div>
                 <div style="text-align: center;">
-                    <a href="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8" class="watch-btn">🎥 Watch Now</a>
+                    <a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55" class="watch-btn">🎥 Watch Now</a>
                 </div>
             </div>
 
@@ -406,7 +406,7 @@
                     </div>
                 </div>
                 <div style="text-align: center;">
-                    <a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a" class="watch-btn">🎥 Watch Now</a>
+                    <a href="https://www.profitableratecpm.com/s85t48zndn?key=8643450af5bb06aeb5b48c2c03f1cc30" class="watch-btn">🎥 Watch Now</a>
                 </div>
             </div>
         </section>
@@ -592,28 +592,28 @@
                 <div class="footer-section">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="https://www.profitableratecpm.com/gjfx4s3hn?key=15059bd2d625f06bcd5e0307e5501c97">Live Streaming</a></li>
-                        <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">Highlights</a></li>
-                        <li><a href="https://www.profitableratecpm.com/gjfx4s3hn?key=15059bd2d625f06bcd5e0307e5501c97">Statistics</a></li>
-                        <li><a href="https://www.profitableratecpm.com/bcgit0k5y6?key=c42a78503bb2714e1669b35c13cce026">Schedule</a></li>
+                        <li><a href="https://www.profitableratecpm.com/afh65r9z3u?key=00b5e86a9929bf36920d83ca153fa6d3">Live Streaming</a></li>
+                        <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Highlights</a></li>
+                        <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Statistics</a></li>
+                        <li><a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55">Schedule</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Leagues</h3>
                     <ul>
-                        <li><a href="https://www.profitableratecpm.com/bcgit0k5y6?key=c42a78503bb2714e1669b35c13cce026">Premier League</a></li>
-                        <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">La Liga</a></li>
-                        <li><a href="https://www.profitableratecpm.com/dx45nkvg?key=3dbf9cc7f63a28045758f2cc8f1e67f0">Serie A</a></li>
-                        <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Bundesliga</a></li>
+                        <li><a href="https://www.profitableratecpm.com/bmhuc0z97k?key=3e576bfd0bffc656ca80b80bcb786fb1">Premier League</a></li>
+                        <li><a href="https://www.profitableratecpm.com/afh65r9z3u?key=00b5e86a9929bf36920d83ca153fa6d3">La Liga</a></li>
+                        <li><a href="https://www.profitableratecpm.com/kch2xzd21a?key=3b57909f35570a852a06a6fc3a54f79c">Serie A</a></li>
+                        <li><a href="https://www.profitableratecpm.com/g8xhrp5c?key=bd3d9df0a3dcd8df9ef787eb43940c4d">Bundesliga</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Support</h3>
                     <ul>
-                        <li><a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24">Help</a></li>
-                        <li><a href="https://www.profitableratecpm.com/dx45nkvg?key=3dbf9cc7f63a28045758f2cc8f1e67f0">Contact</a></li>
-                        <li><a href="https://www.profitableratecpm.com/ancjhamp?key=ce0542e7511da1bf407c49936793518a">FAQ</a></li>
-                        <li><a href="https://www.profitableratecpm.com/su59xvp53e?key=1007940437a854325b8d63766e4e5db3">Report</a></li>
+                        <li><a href="https://www.profitableratecpm.com/bmhuc0z97k?key=3e576bfd0bffc656ca80b80bcb786fb1">Help</a></li>
+                        <li><a href="hhttps://www.profitableratecpm.com/g8xhrp5c?key=bd3d9df0a3dcd8df9ef787eb43940c4d">Contact</a></li>
+                        <li><a href="https://www.profitableratecpm.com/g8xhrp5c?key=bd3d9df0a3dcd8df9ef787eb43940c4d">FAQ</a></li>
+                        <li><a href="https://www.profitableratecpm.com/kch2xzd21a?key=3b57909f35570a852a06a6fc3a54f79c">Report</a></li>
                     </ul>
                 </div>
             </div>
@@ -623,7 +623,7 @@
 
     <script>
         // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="https://www.profitableratecpm.com/wa42czkga?key=edffe10a3ab738fb25460607f10f09c8"]').forEach(anchor => {
+        document.querySelectorAll('a[href^="https://www.profitableratecpm.com/kch2xzd21a?key=3b57909f35570a852a06a6fc3a54f79c"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
