--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </div>
                 </div>
                 <div style="text-align: center;">
-                    <a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55" class="watch-btn">🎥 Watch Now</a>
+                    <a href="https://www.google.com" class="watch-btn">🎥 Watch Now</a>
                 </div>
             </div>
 
@@ -657,7 +657,7 @@
         document.querySelectorAll('.watch-btn').forEach(btn => {
             btn.addEventListener('click', function(e) {
                 e.preventDefault();
-		    const url = this.href;
+		const url = this.href;
                 this.textContent = '⏳ Loading...';
                 setTimeout(() => {
                     this.textContent = '🎥 Watch Now';
