--- a/index.html
+++ b/index.html
@@ -543,7 +543,11 @@
             <div class="upcoming-matches">
                 <div class="match-card" style="text-align: center;">
                     <div style="font-size: 3rem; margin-bottom: 1rem;">🏴󠁧󠁢󠁥󠁮󠁧󠁿</div>
-                    <h3>Premier League</h3>
+                    <h3>
+  <a href="https://www.profitableratecpm.com/bmhuc0z97k?key=3e576bfd0bffc656ca80b80cb0786fb1" style="text-decoration: none; color: inherit;">
+    Premier League
+  </a>
+</h3>
                     <p style="color: #ccc; margin: 0.5rem 0;">English League</p>
                     <div class="league-badge">20 Teams</div>
                 </div>
