--- a/index.html
+++ b/index.html
@@ -541,51 +541,60 @@
             <h2 class="section-title">🏆 Popular Leagues</h2>
             
             <div class="upcoming-matches">
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🏴󠁧󠁢󠁥󠁮󠁧󠁿</div>
-                    <h3>
+
   <a href="https://www.profitableratecpm.com/bmhuc0z97k?key=3e576bfd0bffc656ca80b80cb0786fb1" style="text-decoration: none; color: inherit;">
-    Premier League
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🇬🇧</div>
+      <h3>Premier League</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">English League</p>
+      <div class="league-badge">20 Teams</div>
+    </div>
   </a>
-</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">English League</p>
-                    <div class="league-badge">20 Teams</div>
-                </div>
 
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🇪🇸</div>
-                    <h3>La Liga</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">Spanish League</p>
-                    <div class="league-badge">20 Teams</div>
-                </div>
+  <a href="https://www.profitableratecpm.com/afh6sr93u?key=00b58e0a9929bf369208d3ca153fa6d3" style="text-decoration: none; color: inherit;">
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🇪🇸</div>
+      <h3>La Liga</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">Spanish League</p>
+      <div class="league-badge">20 Teams</div>
+    </div>
+  </a>
 
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🇩🇪</div>
-                    <h3>Bundesliga</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">German League</p>
-                    <div class="league-badge">18 Teams</div>
-                </div>
+  <a href="https://www.profitableratecpm.com/g8xhrp5c?key=bd3d9df0a3dcd8f9ef787eb43404c4d" style="text-decoration: none; color: inherit;">
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🇩🇪</div>
+      <h3>Bundesliga</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">German League</p>
+      <div class="league-badge">18 Teams</div>
+    </div>
+  </a>
 
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🇮🇹</div>
-                    <h3>Serie A</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">Italian League</p>
-                    <div class="league-badge">20 Teams</div>
-                </div>
+  <a href="https://www.profitableratecpm.com/kch2xzd21a?key=3b57099f35570a852a06af6c3a5f479c" style="text-decoration: none; color: inherit;">
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🇮🇹</div>
+      <h3>Serie A</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">Italian League</p>
+      <div class="league-badge">20 Teams</div>
+    </div>
+  </a>
 
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🇫🇷</div>
-                    <h3>Ligue 1</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">French League</p>
-                    <div class="league-badge">20 Teams</div>
-                </div>
+  <a href="https://www.profitableratecpm.com/cz0i5prdu5?key=d41325e372ac54c3de087e34ef616b24" style="text-decoration: none; color: inherit;">
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🇫🇷</div>
+      <h3>Ligue 1</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">French League</p>
+      <div class="league-badge">20 Teams</div>
+    </div>
+  </a>
 
-                <div class="match-card" style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 1rem;">🏆</div>
-                    <h3>Champions League</h3>
-                    <p style="color: #ccc; margin: 0.5rem 0;">UEFA Champions League</p>
-                    <div class="league-badge">32 Teams</div>
-                </div>
+  <a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55" style="text-decoration: none; color: inherit;">
+    <div class="match-card" style="text-align: center;">
+      <div style="font-size: 3rem; margin-bottom: 1rem;">🏆</div>
+      <h3>Champions League</h3>
+      <p style="color: #ccc; margin: 0.5rem 0;">UEFA Champions League</p>
+      <div class="league-badge">32 Teams</div>
+    </div>
+  </a>
             </div>
         </section>
     </main>
