--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SportStream - Live Sports Streaming</title>
-	<meta property="og:image" content="https://images.imyfone.com/id/assets/article/screen-mirror/football-sreaming-website.webp">
+	<meta property="og:image" content="https://assets.telkomsel.com/public/2025-02/live-streaming-bola.jpg?VersionId=.5GswquDf5Ci1PmV.TJrwA2yqDccxgRZ">
     <style>
         * {
             margin: 100;
