--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55" style="text-decoration: none; color: inherit;">
       <div class="match-card">
-        <div class="match-time">⏰ Today, 9:00 PM</div>
+        <div class="match-time">⏰ Today, 9:00 AM</div>
         <div class="match-info">
           <div class="small-team">
             <div class="small-logo">
@@ -441,7 +441,7 @@
 
     <a href="https://www.profitableratecpm.com/ip0kkeb3?key=2ae9ce40208d35a5ec1673e8c8fe8f55" style="text-decoration: none; color: inherit;">
       <div class="match-card">
-        <div class="match-time">⏰ Tomorrow, 2:00 AM</div>
+        <div class="match-time">⏰ Tomorrow, 2:00 PM</div>
         <div class="match-info">
           <div class="small-team">
             <div class="small-logo">
@@ -463,7 +463,7 @@
 
     <a href="https://www.profitableratecpm.com/s85t48zndn?key=8643450af5bb06aeb5b48c2c03f1cc30" style="text-decoration: none; color: inherit;">
       <div class="match-card">
-        <div class="match-time">⏰ Tomorrow, 7:30 PM</div>
+        <div class="match-time">⏰ Tomorrow, 7:30 AM</div>
         <div class="match-info">
           <div class="small-team">
             <div class="small-logo">
@@ -507,7 +507,7 @@
 
     <a href="https://www.profitableratecpm.com/afh6sr93u?key=00b58e0a9929bf369208d3ca153fa6d3" style="text-decoration: none; color: inherit;">
       <div class="match-card">
-        <div class="match-time">⏰ Monday, 1:30 AM</div>
+        <div class="match-time">⏰ Monday, 03:00 PM</div>
         <div class="match-info">
           <div class="small-team">
             <div class="small-logo">
@@ -529,7 +529,7 @@
 
     <a href="https://www.profitableratecpm.com/bmhuc0z97k?key=3e576bfd0bffc656ca80b80cb0786fb1" style="text-decoration: none; color: inherit;">
       <div class="match-card">
-        <div class="match-time">⏰ Tuesday, 2:45 AM</div>
+        <div class="match-time">⏰ Tuesday, 2:45 PM</div>
         <div class="match-info">
           <div class="small-team">
             <div class="small-logo">
